[gd_scene load_steps=16 format=3 uid="uid://dhwybncfg55n5"]

[ext_resource type="Script" path="res://scenes/passwordChecker.gd" id="1_bxj1w"]
[ext_resource type="Texture2D" uid="uid://bvmji44fk8lp0" path="res://asserts/UI/uiElements/empty_password_box.PNG" id="1_hpo1u"]
[ext_resource type="Texture2D" uid="uid://dd3cg4bdjfqf0" path="res://asserts/UI/additional_assets/book_icon_neutral.PNG" id="2_pwqbn"]
[ext_resource type="FontFile" uid="uid://dsbbefbco6we6" path="res://asserts/fonts/Josefin_Sans/static/JosefinSans-BoldItalic.ttf" id="3_gee1i"]
[ext_resource type="Texture2D" uid="uid://d3oycsftlver7" path="res://asserts/UI/additional_assets/book_icon_pressed.PNG" id="3_vyijb"]
[ext_resource type="Texture2D" uid="uid://51mxrhww02uj" path="res://asserts/UI/additional_assets/generator_neutral.PNG" id="4_jvs4q"]
[ext_resource type="Texture2D" uid="uid://yvm4g12l2y0c" path="res://asserts/UI/additional_assets/Enter_enabled.PNG" id="4_nc8ux"]
[ext_resource type="Texture2D" uid="uid://bqgk6ixxk65ut" path="res://asserts/UI/additional_assets/enter_pressed.PNG" id="5_qcnw7"]
[ext_resource type="Texture2D" uid="uid://cvnhtgokpxk1f" path="res://asserts/UI/additional_assets/generator_pressed.PNG" id="5_qdrl8"]
[ext_resource type="Texture2D" uid="uid://b0a8238jr0lcu" path="res://asserts/UI/additional_assets/strength_high.PNG" id="6_8o7hx"]
[ext_resource type="Texture2D" uid="uid://bcebcw5skbm2u" path="res://asserts/UI/additional_assets/strength_moderate.PNG" id="8_j3vfb"]
[ext_resource type="Texture2D" uid="uid://djb4ywwbvu2sw" path="res://asserts/UI/additional_assets/strength_Low_empty.PNG" id="9_sui4b"]

[sub_resource type="Animation" id="Animation_x74jt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../saver:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(88, 8)]
}

[sub_resource type="Animation" id="Animation_eypxi"]
resource_name = "boot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(96, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../saver:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(192, 8), Vector2(88, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_008al"]
_data = {
"RESET": SubResource("Animation_x74jt"),
"boot": SubResource("Animation_eypxi")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxj1w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.882353, 0.882353, 0.882353, 1)

[node name="EmptyPasswordBox" type="Sprite2D" parent="."]
position = Vector2(576, 280)
texture = ExtResource("1_hpo1u")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 176.0
offset_right = 1038.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(1, 0.337255, 0.419608, 1)
theme_override_font_sizes/font_size = 40
text = "Password strength checker"

[node name="password" type="LineEdit" parent="."]
modulate = Color(0.333333, 0.32549, 0.329412, 1)
layout_mode = 0
offset_left = 392.0
offset_top = 256.0
offset_right = 760.0
offset_bottom = 304.0
theme_override_fonts/font = ExtResource("3_gee1i")
theme_override_font_sizes/font_size = 25
placeholder_text = "Password"
flat = true
caret_blink = true

[node name="generator" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 478.0
offset_bottom = 428.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_jvs4q")
texture_pressed = ExtResource("5_qdrl8")

[node name="saver" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 8.0
offset_right = 369.0
offset_bottom = 267.0
scale = Vector2(0.31, 0.31)
texture_normal = ExtResource("2_pwqbn")
texture_pressed = ExtResource("3_vyijb")

[node name="enter" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 408.0
offset_right = 905.0
offset_bottom = 578.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_nc8ux")
texture_pressed = ExtResource("5_qcnw7")

[node name="StrengthHigh" type="Sprite2D" parent="."]
position = Vector2(567, 360)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_8o7hx")

[node name="StrengthLow" type="Sprite2D" parent="."]
position = Vector2(567, 360)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_j3vfb")

[node name="StrengthLowEmpty" type="Sprite2D" parent="."]
position = Vector2(567, 368)
scale = Vector2(0.45, 0.45)
texture = ExtResource("9_sui4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../generator")
libraries = {
"": SubResource("AnimationLibrary_008al")
}
autoplay = "boot"

[connection signal="pressed" from="generator" to="." method="_on_generator_pressed"]
[connection signal="pressed" from="saver" to="." method="_on_saver_pressed"]
[connection signal="pressed" from="enter" to="." method="_on_enter_pressed"]
